load(
    "@rules_rust//rust:defs.bzl",
    "rust_library",
)

package(default_visibility = ["//visibility:public"])
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

licenses([
    "notice",  # MIT from expression "MIT"
])

rust_library(
    name = "safe_ftdi",
    srcs = glob(["src/*.rs"]),
    crate_features = [
        "default",
    ],
    crate_root = "src/lib.rs",
    data = [],
    edition = "2018",
    rustc_flags = [
        "--cap-lints=allow",
    ],
    tags = [
        "crate-name=safe-ftdi",
    ],
    deps = [
        "@crate_index//:libftdi1-sys",
    ],
)
